--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -2,7 +2,10 @@
 title: Who uses Socrata?
 tweet_text: That time I downloaded all of the 80,000 @socrata datasets, I also downloaded the 10,000 users.
 ---
-As you may have read, I recently downloaded the metadata files for all
+```{r configure, echo = F}
+opts_chunk$set(fig.width=10, fig.height=5, dpi = 42 * 5)
+```
+I recently downloaded the metadata files for all
 of the datasets on all of the Socrata portals (for a particular definition
 of "all").
 
