--- a/words/03-users.Rmd
+++ b/words/03-users.Rmd
@@ -148,7 +148,6 @@ and a view has only one table.)
 
 ```{r n.tables}
 plot.count(users$n_tables, 'tables', col = 1 + (!is.na(users$roleName) & (users$roleName == 'publisher' | users$roleName == 'administrator')))
-text(x = 0.2, y = 1.2, labels = 'Most users\nhave one table', pos = 4, col = 2)
 text(x = 3.5, y = 1.5, labels = 'Data.gov Program\nManagement Office', col = 2)
 ```
 
@@ -414,7 +413,7 @@ data back to that. In the following plot, each dot is a view. The location along
 the Y axis indicates the user that created it, the location along the X axis
 indicates the date of publication.
 
-```{r user.views.1}
+```{r user_views_1}
 p <- ggplot(user.views) + aes(x = date, y = userid) + 
   theme(axis.text.y=element_blank(), axis.title.y = element_text('User creating the view'), axis.ticks.y = element_blank()) +
   scale_x_date('View publication date')
@@ -428,7 +427,7 @@ around the same date.
 Let's add some more variables. In this next one, color is the type of view
 and size is the number of cells.
 
-```{r user.views.2}
+```{r user_views_2}
 p + aes(color = viewType, size = nrow * ncol) + scale_size_continuous('Number of cells', labels = comma) +
  geom_point(alpha = 1/10)
 ```
@@ -483,7 +482,7 @@ Let's take a look at some of them.
 
 Here are some users who made a lot of views in a really short time.
 
-```{r user.intensity.2}
+```{r user_intensity_1, fig.height = 10}
 user.intensity <- subset(ddply(user.views, 'userid', function(df){
   c(n = nrow(df),
     first = min(df$date),
@@ -523,7 +522,7 @@ is a [DC newspaper](http://washingtonexaminer.com/).
 
 And here's a plot of their activity.
 
-```{r user.intensity.3}
+```{r user_intensity_1, fig.height = 10}
 intense.users.ids <- data.frame(userid = user.intensity[order(user.intensity$last - user.intensity$first, decreasing=T),'userid'][1:10])
 intense.users.ids$username <- users[as.character(intense.users.ids$userid),'displayName']
 intense.users.views <- sqldf('select * from "user.views" join "intense.users.ids" join socrata where "user.views".userid = "intense.users.ids".userid and "user.views".viewid = socrata.id')
