--- a/words/08-display-types.Rmd
+++ b/words/08-display-types.Rmd
@@ -55,7 +55,7 @@ was going on but didn't come up with any satisfactory answer.
 
 So I don't really know why some views don't have view types.
 
-## Popular view types
+## Hip view types
 Let's focus on the things that are neither tables nor external links.
 
 ```{r not_boring}
@@ -66,13 +66,47 @@ ggplot(not.boring) + aes(x = displayType) + geom_bar() + coord_flip()
 
 What are all of these types? Here are some examples.
 
-* [intensitymap](https://opendata.socrata.com/dataset/Statewise-Prison-Population/dud8-q2qd?) (the only one)
-* [calendar](https://data.oregon.gov/dataset/Public-Meetings-3-Month-View-/4775-yg3b?)
-* [form](https://data.wa.gov/Economics/Broadband-Project-Data-Entry/38rz-krmg?)
-* [fatrow](https://electionsdata.kingcounty.gov/dataset/Attorney-General-table-General-Election-2012/2y5z-ffa8?)
-* [api](https://data.energystar.gov/Government/ENERGY-STAR-Certified-Geothermal-Heatpumps/2f83-p388?)
-    (documentation is [here](https://data.energystar.gov/developers/docs/energy-star-certified-geothermal-heatpumps))
-
 With so many types, I'm surprised that map and chart are pretty much the only ones that get used.
 I can see why few people would make APIs, but you'd think people would want to try making pie charts
 instead of the normal "chart".
+
+In hipster fashion, I think that maps and charts are overused, so
+I'm going to look at the cool ones that nobody has heard about.
+
+### Intensity map
+There is only one [intensitymap](https://opendata.socrata.com/dataset/Statewise-Prison-Population/dud8-q2qd?)
+among all of the views on all of the Socrata portals. I have no idea what it is, nor how to create one.
+I tried making a [heat map](https://opendata.socrata.com/Government/Tom-made-a-heat-map/h4cx-3gq9), but that
+gets the type "map" rather than "intensitymap". I guess they don't make these anymore.
+
+### Various charts
+The "*chart" types all seem to be real things.
+Here's a [piechart](https://opendata.socrata.com/dataset/By-County-Chart/66gq-2hse?).
+Look at my [area chart](https://opendata.socrata.com/dataset/Tom-makes-an-area-chart-/45sn-pggi)!
+I'm sure you can guess what the rest look like.
+
+One funny thing: I can't tell the difference between an
+[imagesparkline](https://opendata.socrata.com/Business/growth-chart-2/kefb-jf8u?)
+and a [linechart](https://opendata.socrata.com/dataset/Num-employees-by-sector-trend-chart/zwsx-hn97?).
+
+### Page
+A [page](https://explore.data.gov/dataset/OlaSW_WH/4yyz-msx7?)
+lets you look at one record at a time.
+
+### Calendar
+The [calendar](https://data.oregon.gov/dataset/Public-Meetings-3-Month-View-/4775-yg3b?)
+is what it sounds like.
+
+### Form
+It seems that a [form](https://data.wa.gov/Economics/Broadband-Project-Data-Entry/38rz-krmg?)
+lets you enter data.
+
+### Fat row
+A [fatrow](https://electionsdata.kingcounty.gov/dataset/Attorney-General-table-General-Election-2012/2y5z-ffa8?)
+is something between a table and a page.
+
+### API
+Here's an [api](https://data.energystar.gov/Government/ENERGY-STAR-Certified-Geothermal-Heatpumps/2f83-p388?).
+I think it's an API built with the [API foundry](http://www.socrata.com/api-foundry/).
+It comes with automatic [documentation](https://data.energystar.gov/developers/docs/energy-star-certified-geothermal-heatpumps).
+
