--- a/words/08-display-types.Rmd
+++ b/words/08-display-types.Rmd
@@ -94,17 +94,50 @@ A [page](https://explore.data.gov/dataset/OlaSW_WH/4yyz-msx7?)
 lets you look at one record at a time. People actually use this!
 Especially in Oregon.
 
-```{r page}
+```{r page_portal}
 ggplot(subset(socrata, displayType == 'page')) + aes(x = portal) + geom_bar() + coord_flip()
 ```
 
-ggplot(subset(socrata, displayType == 'page')) + aes(x = owner.displayName) + geom_bar() + coord_flip()
+Who's dwiese?
 
-    subset(socrata, displayType == 'page')[c('portal', 'owner.id')]
+```{r page_owner}
+ggplot(subset(socrata.distinct, displayType == 'page')) + aes(x = owner_displayName) + geom_bar() + coord_flip()
+```
+
+It seems that he made a few pages on explore.data.gov that were federated.
+
+    subset(socrata, displayType == 'page' & owner.displayName == 'dwiese')[c('portal', 'id')]
+
+Like [this one](https://explore.data.gov/dataset/OlaSW_WH/4yyz-msx7?)
+
+I'm still totally confused; I don't see why you would ever want one of these.
+Maybe it would be useful if you could get a URL for a particular page, but you
+can't even do that. Do people really use these?
+
+```{r page_use}
+ggplot(subset(socrata.distinct, displayType == 'page')) + aes(x = viewCount) + geom_histogram() +
+  scale_x_continuous('Hits per "page" (paginated dataset view type)') +
+  scale_y_continuous('Frequency', breaks = seq(0, 12, 4)) +
+  ggtitle("People don't really look at data in the \"page\" view.")
+```
+
+No, not really. Though that was more than I'd expected.
 
 ### Calendar
 The [calendar](https://data.oregon.gov/dataset/Public-Meetings-3-Month-View-/4775-yg3b?)
-is what it sounds like.
+is what it sounds like. People do use these.
+
+```{r calendar_use}
+ggplot(subset(socrata.distinct, displayType == 'calendar')) + aes(x = viewCount) + geom_histogram() +
+  scale_x_continuous('Hits per calendar', labels = comma) +
+  scale_y_continuous('Frequency', labels = comma) +
+  ggtitle("Someone likes her calendar.")
+```
+
+```{r calendar_use_2}
+calendar.use <- subset(socrata, displayType == 'calendar')[c('portal', 'id', 'viewCount')]
+calendar.use[order(calendar.use$viewCount, decreasing = T),][1:10,c('portal', 'id', 'viewCount')]
+```
 
 ### Form
 It seems that a [form](https://data.wa.gov/Economics/Broadband-Project-Data-Entry/38rz-krmg?)
