--- a/words/08-display-types.Rmd
+++ b/words/08-display-types.Rmd
@@ -179,6 +179,12 @@ It belongs to the [National Oceanic and Atmospheric Administration Fisheries Ser
 which apparently used [a Socrata form](https://nmfs.socrata.com/Government/2011-Aquaculture-Public-Comments-Form/u5id-8nqp) to power a
 [policy comments website](http://www.nmfs.noaa.gov/aquaculture/policy2/).
 
+New York made a form for [feedback on the portal](https://data.ny.gov/dataset/Give-Feedback/fq3e-q75i?).
+
+World Bank Open Finances made a
+[form](https://finances.worldbank.org/dataset/Global-Open-Data-Calendar-Entry-Form/qdbh-rfd3?)
+that populates an
+[open data events calendar](https://finances.worldbank.org/dataset/Global-Open-Data-Calendar/g4sx-dwxc).
 
 ### Fat row
 A [fatrow](https://electionsdata.kingcounty.gov/dataset/Attorney-General-table-General-Election-2012/2y5z-ffa8?)
